aggiornato il top header

--- a/templates/prova.html
+++ b/templates/prova.html
@@ -14,19 +14,22 @@
     </style>
 </head>
 <body>
-     Header
-    <div class="it-header-slim-wrapper bg-primary text-white">
+    <!-- Header -->
+    <div class="it-header-slim-wrapper text-white" style="background-color: #013975;">
         <div class="container-xxl">
             <div class="row align-items-center">
                 <div class="col-6">
-                    <span>Ente Appartenenza</span>
+                    <span class="d-flex align-items-center" style="font-size: 1rem; font-weight: bold";>
+                        <img src="static/logo_repubblica_italiana.png" alt="Logo Ministero" style="height: 50px; margin-right: 8px;">
+                        Ministero delle Imprese e del Made in Italy
+                    </span>
                 </div>
                 <div class="col-6 text-end">
                     <a href="#" class="text-white">Accedi all'area personale</a>
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
     <header class="it-header-wrapper">
         <div class="it-header-center-wrapper bg-primary">
             <div class="container-xxl">
