aggiornato codice per il logo, ora funzionante

--- a/templates/prova.html
+++ b/templates/prova.html
@@ -20,7 +20,7 @@
             <div class="row align-items-center">
                 <div class="col-6">
                     <span class="d-flex align-items-center" style="font-size: 1rem; font-weight: bold";>
-                        <img src="static/logo_repubblica_italiana.png" alt="Logo Ministero" style="height: 50px; margin-right: 8px;">
+                        <img src="../static/logo_repubblica_italiana.png" alt="Logo Ministero" style="height: 50px; margin-right: 8px;">
                         Ministero delle Imprese e del Made in Italy
                     </span>
                 </div>
