aggiornato header (scritta sinfi e lego)

--- a/templates/prova.html
+++ b/templates/prova.html
@@ -39,9 +39,12 @@
                             <div class="it-brand-wrapper">
                                 <a href="#">
                                     <svg class="icon" aria-hidden="true"><use href="/svg/sprites.svg#it-pa"></use></svg>
-                                    <div class="it-brand-text">
-                                        <div class="it-brand-title">INFRATEL ITALIA</div>
-                                        <div class="it-brand-tagline d-none d-md-block">Tag line dell'Istituzione</div>
+                                    <div class="d-flex align-items-center">
+                                        <img src="..static/logo_sinfi.png" alt="Logo SINFI" style="height: 50px; margin-right: 15px;">
+                                        <div>
+                                            <div class="it-brand-title">SINFI</div>
+                                            <div class="it-brand-tagline d-none d-md-block">Sistema Informativo Nazionale Federato delle Infrastrutture</div>
+                                        </div>
                                     </div>
                                 </a>
                             </div>
