--- a/templates/prova.html
+++ b/templates/prova.html
@@ -40,7 +40,7 @@
                                 <a href="#">
                                     <svg class="icon" aria-hidden="true"><use href="/svg/sprites.svg#it-pa"></use></svg>
                                     <div class="d-flex align-items-center">
-                                        <img src="..static/logo_sinfi.png" alt="Logo SINFI" style="height: 50px; margin-right: 15px;">
+                                        <img src="../static/logo_sinfi.png" alt="Logo SINFI" style="height: 50px; margin-right: 15px;">
                                         <div>
                                             <div class="it-brand-title">SINFI</div>
                                             <div class="it-brand-tagline d-none d-md-block">Sistema Informativo Nazionale Federato delle Infrastrutture</div>
