--- a/templates/prova.html
+++ b/templates/prova.html
@@ -38,7 +38,10 @@
                                     <svg class="icon" aria-hidden="true"><use href="/svg/sprites.svg#it-pa"></use></svg>
                                     <div class="it-brand-text">
                                         <div class="it-brand-title">INFRATEL ITALIA</div>
-                                        <div class="it-brand-tagline d-none d-md-block">Tag line dell'Istituzione</div>
+                                        <div class="d-flex gap-2">
+                                            <button type="button" class="btn btn-primary">Inserisci TFO</button>
+                                            <button type="button" class="btn btn-secondary">Inserisci Edificio</button>
+                                        </div>
                                     </div>
                                 </a>
                             </div>
