--- a/templates/prova.html
+++ b/templates/prova.html
@@ -52,7 +52,7 @@
                                 <div class="it-socials d-none d-md-flex me-3">
                                     <span>Seguici su</span>
                                     <ul class="d-flex">
-                                        <li class="me-2"><a href="#" aria-label="Facebook"><svg class="icon"><use href="/svg/sprites.svg#it-facebook"></use></svg></a></li>
+                                        <li class="me-2"><a href="#" aria-label="Facebook"><svg class="icon"><use href="../static/facebook_logo.png"></use></svg></a></li>
                                         <li class="me-2"><a href="#" aria-label="Github"><svg class="icon"><use href="/svg/sprites.svg#it-github"></use></svg></a></li>
                                         <li class="me-2"><a href="#" aria-label="Twitter"><svg class="icon"><use href="/svg/sprites.svg#it-twitter"></use></svg></a></li>
                                     </ul>
