--- a/templates/registrazione_edifici.html
+++ b/templates/registrazione_edifici.html
@@ -11,6 +11,10 @@
             width: 100%;
             margin-top: 20px;
         }
+
+        .nav-lower {
+        margin-top: 30px; /* Modifica il valore per regolare la posizione */
+        }
     </style>
 </head>
 <body>
@@ -36,38 +40,30 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="it-header-center-content-wrapper d-flex justify-content-between align-items-center">
-                            <div class="it-brand-wrapper">
-                                <a href="#">
-                                    <svg class="icon" aria-hidden="true"><use href="/svg/sprites.svg#it-pa"></use></svg>
-                                    <div class="it-brand-text">
-                                        <div class="it-brand-title">INFRATEL ITALIA</div>
-                                        <div class="d-flex gap-2">
-                                            <button type="button" class="btn btn-primary">Inserisci TFO</button>
-                                            <button type="button" class="btn btn-secondary">Inserisci Edificio</button>
-                                    <div class="d-flex align-items-center">
-                                        <img src="../static/logo_sinfi.png" alt="Logo SINFI" style="height: 50px; margin-right: 15px;">
-                                        <div>
-                                            <div class="it-brand-title">SINFI</div>
-                                            <div class="it-brand-tagline d-none d-md-block">Sistema Informativo Nazionale Federato delle Infrastrutture</div>
+                            <!-- Logo e Brand -->
+                            <div class="d-flex flex-column align-items-start">
+                                <div class="d-flex align-items-center">
+                                    <img src="../static/logo_sinfi.png" alt="Logo SINFI" style="height: 50px; margin-right: 15px;">
+                                    <div>
+                                        <div class="it-brand-title text-white">SINFI</div>
+                                        <div class="it-brand-tagline text-white">
+                                            Sistema Informativo Nazionale Federato delle Infrastrutture
                                         </div>
                                     </div>
-                                </a>
+                                </div>
+                                <!-- Navigazione sotto il Brand -->
+                                <nav class="d-flex gap-4 nav-lower">
+                                    <a href="#" class="text-white text-decoration-none">Registrazione edifici</a>
+                                    <a href="#" class="text-white text-decoration-none">Registrazione terminazioni ottiche</a>
+                                </nav>
                             </div>
-                            <div class="it-right-zone d-flex align-items-center">
-                                <div class="it-socials d-none d-md-flex me-3">
-                                    <span>Seguici su</span>
-                                    <ul class="d-flex">
-                                        <li class="me-2"><a href="#" aria-label="Facebook"><svg class="icon"><use href="../static/facebook_logo.png"></use></svg></a></li>
-                                        <li class="me-2"><a href="#" aria-label="Github"><svg class="icon"><use href="/svg/sprites.svg#it-github"></use></svg></a></li>
-                                        <li class="me-2"><a href="#" aria-label="Twitter"><svg class="icon"><use href="/svg/sprites.svg#it-twitter"></use></svg></a></li>
-                                    </ul>
-                                </div>
-                                <div class="it-search-wrapper">
-                                    <span class="d-none d-md-block">Cerca</span>
-                                    <a class="search-link rounded-icon" aria-label="Cerca nel sito" href="#">
-                                        <svg class="icon"><use href="/svg/sprites.svg#it-search"></use></svg>
-                                    </a>
-                                </div>
+        
+                            <!-- Sezione social -->
+                            <div class="d-flex align-items-center gap-3">
+                                <span class="text-white">Seguici su</span>
+                                <a href="#" class="text-white text-decoration-none"><i class="fab fa-facebook"></i></a>
+                                <a href="#" class="text-white text-decoration-none"><i class="fab fa-instagram"></i></a>
+                                <a href="#" class="text-white text-decoration-none"><i class="fab fa-twitter"></i></a>
                             </div>
                         </div>
                     </div>
@@ -75,6 +71,8 @@
             </div>
         </div>
     </header>
+    
+    
 
     <!-- Main Content -->
     <main class="container my-5">
