--- a/templates/registrazione_edifici.html
+++ b/templates/registrazione_edifici.html
@@ -94,7 +94,16 @@
 
         <div class="row align-items-start">
             <!-- Form -->
-            <div class="col-lg-4">
+            <style>
+                .custom-border {
+                    border: 2px solid #add8e6; /* Blu chiaro */
+                    border-radius: 10px; /* Angoli arrotondati */
+                    padding: 15px; /* Spazio interno */
+                    margin: 15px; /* Spazio esterno */
+                    background-color: #f9f9f9; /* Colore di sfondo opzionale */
+                }
+            </style>
+            <div class="col-lg-4 custom-border">
                 <div class="it-card">
     
                     <div class="it-card-body">
