--- a/templates/registrazione_edifici.html
+++ b/templates/registrazione_edifici.html
@@ -15,8 +15,6 @@
 
     padding: 15px; /* Spazio interno */
 
-    margin: 15px; /* Spazio esterno */
-
     background-color: #f9f9f9; /* Colore di sfondo opzionale */
 
 }
@@ -74,8 +72,8 @@
                                 <div class="d-flex align-items-center">
                                     <img src="../static/logo_sinfi.png" alt="Logo SINFI" style="height: 50px; margin-right: 15px;">
                                     <div>
-                                        <div class="it-brand-title text-white">SINFI</div>
-                                        <div class="it-brand-tagline text-white">
+                                        <div class="it-brand-title text-white" style="font-size: 1.3rem; font-weight: bold">SINFI</div>
+                                        <div class="it-brand-tagline text-white" style="font-size: 1rem; font-weight: bold">
                                             Sistema Informativo Nazionale Federato delle Infrastrutture
                                         </div>
                                     </div>
@@ -83,8 +81,8 @@
                         
                                 <!-- Navigazione sotto il Brand -->
                                 <nav class="d-flex gap-4 nav-lower">
-                                    <a href="registrazione_edifici.html" class="text-white text-decoration-none nav-link" id="link-edifici">Registrazione edifici</a>
-                                    <a href="registrazione-terminazioni.html" class="text-white text-decoration-none nav-link" id="link-terminazioni">Registrazione terminazioni ottiche</a>
+                                    <a href="registrazione_edifici.html" class="text-white text-decoration-none nav-link" style="font-size: 0.9rem; font-weight: bold" id="link-edifici">Registrazione edifici</a>
+                                    <a href="registrazione-terminazioni.html" class="text-white text-decoration-none nav-link" style="font-size: 0.9rem; font-weight: bold" id="link-terminazioni">Registrazione terminazioni ottiche</a>
                                 </nav>
                             </div>
         
