--- a/templates/registrazione_edifici.html
+++ b/templates/registrazione_edifici.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrazione Edifici - Banda Ultralarga</title>
     <link href="https://unpkg.com/bootstrap-italia@2.11.0/dist/css/bootstrap-italia.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
+
+.it-brand-title {
+    font-size: 1.3rem;
+    font-weight: bold;
+}
 
 .custom-border {
 
@@ -18,7 +24,9 @@
     background-color: #f9f9f9; /* Colore di sfondo opzionale */
 
 }
-
+body {
+            font-family: 'Titillium Web', sans-serif;
+        }
 
         #map-container {
             height: 400px;
@@ -51,7 +59,7 @@
             <div class="row align-items-center">
                 <div class="col-6">
                     <span class="d-flex align-items-center" style="font-size: 1rem; font-weight: bold";>
-                        <img src="../static/logo_repubblica_italiana.png" alt="Logo Ministero" style="height: 50px; margin-right: 8px;">
+                        <img src="../static/logo_repubblica_italiana.png" alt="Logo Ministero" style="height: 40px; margin-right: 8px;">
                         Ministero delle Imprese e del Made in Italy
                     </span>
                 </div>
@@ -72,7 +80,7 @@
                                 <div class="d-flex align-items-center">
                                     <img src="../static/logo_sinfi.png" alt="Logo SINFI" style="height: 50px; margin-right: 15px;">
                                     <div>
-                                        <div class="it-brand-title text-white" style="font-size: 1.3rem; font-weight: bold">SINFI</div>
+                                        <div class="it-brand-title text-white">SINFI</div>
                                         <div class="it-brand-tagline text-white" style="font-size: 1rem; font-weight: bold">
                                             Sistema Informativo Nazionale Federato delle Infrastrutture
                                         </div>
@@ -81,8 +89,8 @@
                         
                                 <!-- Navigazione sotto il Brand -->
                                 <nav class="d-flex gap-4 nav-lower">
-                                    <a href="registrazione_edifici.html" class="text-white text-decoration-none nav-link" style="font-size: 0.9rem; font-weight: bold" id="link-edifici">Registrazione edifici</a>
-                                    <a href="registrazione-terminazioni.html" class="text-white text-decoration-none nav-link" style="font-size: 0.9rem; font-weight: bold" id="link-terminazioni">Registrazione terminazioni ottiche</a>
+                                    <a href="registrazione_edifici.html" class="text-white text-decoration-none nav-link" style="font-size: 1.2rem; " id="link-edifici">REGISTRAZIONE EDIFICI</a>
+                                    <a href="registrazione-terminazioni.html" class="text-white text-decoration-none nav-link" style="font-size: 1.2rem; " id="link-terminazioni">REGISTRAZIONE TERMINAZIONI OTTICHE</a>
                                 </nav>
                             </div>
         
