--- a/templates/registrazione_edifici.html
+++ b/templates/registrazione_edifici.html
@@ -202,7 +202,7 @@
                             </div>
                             <div class="d-grid gap-2">
                                 <button type="button" class="btn btn-primary" onclick="aggiungiDati()">Aggiungi</button>
-                                <button type="submit" class="btn btn-success" onclick="Confrim_request()"</button>
+                                <button type="submit" class="btn btn-success" onclick="Confrim_request()">Invia</button>
                             </div>
                         </form>
                     </div>
