Footer di Melanie

--- a/templates/registrazione_edifici.html
+++ b/templates/registrazione_edifici.html
@@ -20,14 +20,55 @@
         padding: 10px 15px;
         border-radius: 5px;
         transition: background-color 0.3s ease;
-    }
+        }
 
-    .nav-link:hover {
+        .nav-link:hover {
         background-color: rgba(255, 255, 255, 0.1);
-    }
+        }
         .d-flex.flex-column.align-items-start {
-    margin-top: 20px;
-}
+        margin-top: 20px;
+        }
+        footer {
+            background-color: #004E99;
+            color: white;
+            padding: 40px 0;
+        }
+        footer a {
+            color: #ffffff;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+        h1 {
+            font-size: 25px;
+            font-weight: bold;
+            margin: auto;
+            font: #ffffff;
+        }
+        footer h5 {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 15px;
+            
+        }
+        footer ul {
+            list-style: none;
+            padding: 0;
+        }
+        footer ul li {
+            margin-bottom: 10px;
+        }
+        footer .footer-bottom {
+            border-top: 1px solid #ffffff;
+            margin-top: 30px;
+            padding-top: 20px;
+            font-size: 14px;
+        }
+        h2 {
+            font-size: 25px;
+        }
+
 
     </style>
 </head>
@@ -404,6 +445,90 @@ function recoverapi() {
         riga.remove();
     }
 </script>
-    
+    <!--Footer-->
+    <footer>
+        <div class="it-footer-slim-wrapper text-white" style="background-color: #004E99;">
+            <div class="container-xxl" style="margin-left: 295px; margin-right: 10px;">
+                    <div class="text-center">
+                        <h2>INFRATEL ITALIA</h2>
+                    </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <h5>AMMINISTRAZIONE</h5>
+                    <ul>
+                        <li><a href="#">Giunta e consiglio</a></li>
+                        <li><a href="#">Aree di competenza</a></li>
+                        <li><a href="#">Dipendenti</a></li>
+                        <li><a href="#">Luoghi</a></li>
+                        <li><a href="#">Associazioni e società partecipate</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>SERVIZI</h5>
+                    <ul>
+                        <li><a href="#">Pagamenti</a></li>
+                        <li><a href="#">Sostegno</a></li>
+                        <li><a href="#">Domande e iscrizioni</a></li>
+                        <li><a href="#">Segnalazioni</a></li>
+                        <li><a href="#">Autorizzazioni e concessioni</a></li>
+                        <li><a href="#">Certificati e dichiarazioni</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>NOVITÀ</h5>
+                    <ul>
+                        <li><a href="#">Notizie</a></li>
+                        <li><a href="#">Eventi</a></li>
+                        <li><a href="#">Comunicati stampa</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>DOCUMENTI</h5>
+                    <ul>
+                        <li><a href="#">Progetti e attività</a></li>
+                        <li><a href="#">Delibere, determine e ordinanze</a></li>
+                        <li><a href="#">Bandi</a></li>
+                        <li><a href="#">Concorsi</a></li>
+                        <li><a href="#">Albo pretorio</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom text-center">
+
+            
+            <div class="row mt-4">
+                <div class="col-md-4">
+                    <h5>Contatti</h5>
+                    <p>Sede operativa:</p>
+                    <p>Viale America, 201 - 00144 -Roma presso il Ministero delle Imprese e del Made in Italy</p>
+                    <p>posta@pec.infratelitalia.it</p>
+                    <p>Posta Elettronica Certificata INFRASTRUTTURESERVIZIDIGITALI@POSTACERT.INFRATELITALIA.IT</p>
+                    <p>URP - Ufficio Relazioni con il Pubblico</p>
+                </div>    
+                <div class="col-md-4 text-center">        
+                </div>
+                <div class="col-md-4 text-end">
+                    <h5>Seguici su</h5>
+                    <a href="#">Facebook</a><br>
+                    <a href="#">Twitter</a><br>
+                    <a href="#">Instagram</a><br>
+                </div>
+            </div>
+        </div>
+        </div>
+    </footer>
+    <div class="footer-bottom text-center" style="background-color: #013975; height: 55px;">
+        <a href="#">Media policy</a> | 
+        <a href="#">Note legali</a> | 
+        <a href="#">Privacy policy</a> | 
+        <a href="#">Mappa del sito</a> | 
+        <a href="#">Dichiarazione di accessibilità</a>
+    </div>
+    <script src="https://unpkg.com/bootstrap-italia@2.11.0/dist/js/bootstrap-italia.bundle.min.js"></script>
+
+
 </body>
 </html>
