--- a/templates/registrazione_edifici.html
+++ b/templates/registrazione_edifici.html
@@ -464,85 +464,48 @@ function recoverapi() {
         <div class="it-footer-slim-wrapper text-white" style="background-color: #004E99;">
             <div class="container-xxl" style="margin-left: 295px; margin-right: 10px;">
                     <div class="text-center">
-                        <h2>INFRATEL ITALIA</h2>
+                        <h2>INFRATEL ITALIA</h2></br>
                     </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
-                    <h5>AMMINISTRAZIONE</h5>
-                    <ul>
-                        <li><a href="#">Giunta e consiglio</a></li>
-                        <li><a href="#">Aree di competenza</a></li>
-                        <li><a href="#">Dipendenti</a></li>
-                        <li><a href="#">Luoghi</a></li>
-                        <li><a href="#">Associazioni e società partecipate</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h5>SERVIZI</h5>
-                    <ul>
-                        <li><a href="#">Pagamenti</a></li>
-                        <li><a href="#">Sostegno</a></li>
-                        <li><a href="#">Domande e iscrizioni</a></li>
-                        <li><a href="#">Segnalazioni</a></li>
-                        <li><a href="#">Autorizzazioni e concessioni</a></li>
-                        <li><a href="#">Certificati e dichiarazioni</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h5>NOVITÀ</h5>
-                    <ul>
-                        <li><a href="#">Notizie</a></li>
-                        <li><a href="#">Eventi</a></li>
-                        <li><a href="#">Comunicati stampa</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h5>DOCUMENTI</h5>
-                    <ul>
-                        <li><a href="#">Progetti e attività</a></li>
-                        <li><a href="#">Delibere, determine e ordinanze</a></li>
-                        <li><a href="#">Bandi</a></li>
-                        <li><a href="#">Concorsi</a></li>
-                        <li><a href="#">Albo pretorio</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom text-center">
-
-            
-            <div class="row mt-4">
                 <div class="col-md-4">
-                    <h5>Contatti</h5>
-                    <p>Sede operativa:</p>
-                    <p>Viale America, 201 - 00144 -Roma presso il Ministero delle Imprese e del Made in Italy</p>
-                    <p>posta@pec.infratelitalia.it</p>
-                    <p>Posta Elettronica Certificata INFRASTRUTTURESERVIZIDIGITALI@POSTACERT.INFRATELITALIA.IT</p>
-                    <p>URP - Ufficio Relazioni con il Pubblico</p>
-                </div>    
-                <div class="col-md-4 text-center">        
+                    <img src="https://www.sinfi.it/portal//wp-content/uploads/2023/11/logo-ministero-mimit.svg" width="200" height="200">
+                    <p>Ministero delle Imprese <br> e del Made in Italy</p><br>
+                    <img src="https://www.sinfi.it/portal//wp-content/uploads/2023/12/logo-infratel.png" width="200" height="100">
+                    <br><br>
+                    <p>Infratel Italia</p>
                 </div>
-                <div class="col-md-4 text-end">
-                    <h5>Seguici su</h5>
-                    <a href="#">Facebook</a><br>
-                    <a href="#">Twitter</a><br>
-                    <a href="#">Instagram</a><br>
+                <div class="col-md-4">
+                    <h5>CONTATTI</h5>
+                    <p>Infratel Italia S.p.A</p>
+                    <p>Società soggetta alla direzione ed al coordinamento dell'azionista unico Invitalia - Agenzia nazionale per l’attrazione degli investimenti e lo sviluppo d’impresa S.p.A.</p>
+                    <br><br>
+                    <p>Capitale sociale € 8.594.044,00 iscrizione al Registro delle Imprese di Roma</p>
+                    <p>C.F. e P.IVA 07791571008</p>
+                    <p>R.E.A. 1055521 Roma</p>
+                    <p>T +39 06 97749311</p>
+                    <p>F +39 06 97749370</p>
+                </div>
+                <div class="col-md-4">
+                    <p>info@infratelitalia.it</p>
+                    <p>infrastruttureservizidigitali@postacert.infratelitalia.it</p>
+                    <p>posta@pec.infratelitalia.it</p>
+                    <p>Sede legale</p>
+                    <p>presso Agenzia nazionale per l’attrazione degli investimenti e lo sviluppo d’impresa S.p.A Via Calabria, 46 – 00187 Roma</p>
+                    
+                    <p>Sede operativa</p>
+                    <p>presso il Ministero delle Imprese e del Made in Italy Viale America, 201 - 00144 Roma</p>
                 </div>
             </div>
-        </div>
         </div>
     </footer>
     <div class="footer-bottom text-center" style="background-color: #013975; height: 55px;">
-        <a href="#">Media policy</a> | 
-        <a href="#">Note legali</a> | 
-        <a href="#">Privacy policy</a> | 
-        <a href="#">Mappa del sito</a> | 
-        <a href="#">Dichiarazione di accessibilità</a>
+        <a href="https://www.iubenda.com/privacy-policy/98489026/full-legal">Privacy policy</a> | 
+        <a href="https://www.iubenda.com/privacy-policy/98489026/cookie-policy">Cookie policy</a> | 
+        <a href="https://www.infratelitalia.it/social-media-policy">Social media policy</a> | 
+        <a href="https://www.sinfi.it/portal/consultazione-dati/i-servizi-del-sinfi/note-legali/">Note legali</a>
     </div>
-    <script src="https://unpkg.com/bootstrap-italia@2.11.0/dist/js/bootstrap-italia.bundle.min.js"></script>
-
-
 </body>
 </html>
