Change input box of form last row

--- a/templates/tfo.html
+++ b/templates/tfo.html
@@ -184,7 +184,7 @@
             </div>
             <div class="mb-3">
                 <label for="posizioned" class="form-label">Posizione dettagliata</label>
-                <input type="text" id="posizioned" name="posizioned" class="form-control" placeholder="Inserisci informazioni aggiuntive">
+                <textarea id="posizioned" name="posizioned" class="form-control" placeholder="Inserisci informazioni aggiuntive" rows="4"></textarea>
             </div>
             <button type="button" class="btn btn-primary" onclick="aggiungiDati()">Aggiungi</button>
             <button type="submit" class="btn btn-success">Invio</button>
